# orrery

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  sys
ext/linmath.h/: linmath.h
include/: camera.h  drawable_object.h  linear_algebra.h  mesh.h  shader.h  shader_program.h  shadow_map.h  sphere.h  star.h  text.h  texture.h
shaders/: body.glslf  body.glslv  colours.glslf  lines.glslf  lines.glslv  shadow.glslf  shadow.glslv  star.glslf  star.glslv  sun.glslf  sun.glslv  text.glslv
src/: CMakeLists.txt  camera.c  drawable_object.c  linear_algebra.c  mesh.c  orrery.c  shader.c  shader_program.c  shadow_map.c  sphere.c  star.c  text.c  texture.c
src/shaders/: colours.glslf  colours.glslv
stars/: asterisms.txt
stars/asterisms/: constellationship.fab  plough.fab  plough.fab~
textures/: LICENSE
